footer alignment fix

--- a/loopstudios-landing-page-main/style.scss
+++ b/loopstudios-landing-page-main/style.scss
@@ -151,12 +151,13 @@ a {
     }
 
     @include m-q(375px) {
-      font-size: 3.6rem;
-      padding: 2rem;
+      font-size: 3.4rem;
+      padding: 2.4rem;
     }
 
     @include m-q(320px) {
       font-size: 2.4rem;
+      padding: 2rem;
     }
   }
 }
@@ -199,7 +200,7 @@ a {
     }
     &--footer {
       max-width: 14.4rem;
-      margin-bottom: 2rem;
+      // margin-bottom: 2rem;
     }
   }
 
@@ -267,11 +268,12 @@ a {
     }
 
     &--footer {
-      transform: translateX(-15px);
+      transform: translate(-15px, 10px);
 
       @include m-q(750px) {
         transform: translateX(0);
         align-items: center;
+        margin-top: 3.6rem;
       }
     }
   }
@@ -550,8 +552,13 @@ a {
 }
 
 .footer {
-  padding: 4rem 0;
+  padding: 4.3rem 0;
   background: $Black;
+  position: relative;
+
+  @include m-q(750px) {
+    padding: 5.5rem 0;
+  }
 
   &__content {
     display: grid;
@@ -560,14 +567,27 @@ a {
 
     @include m-q(750px) {
       grid-template-columns: 1fr;
-      // place-items: center;
-      text-align: center;
+      gap: 36px;
+    }
+  }
+
+  &__col-right,
+  &__col-left {
+    min-height: 7.4rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    @include m-q(750px) {
+      min-height: unset;
     }
   }
 
   &__navigation {
-    // display: block;
+    height: 100%;
     flex-direction: column;
+    align-items: flex-start;
+
     @include m-q(750px) {
       align-items: center;
     }
@@ -577,7 +597,6 @@ a {
     list-style: none;
     display: flex;
     justify-content: flex-end;
-    margin-bottom: 3rem;
 
     @include m-q(750px) {
       justify-content: center;
@@ -589,6 +608,10 @@ a {
 
   &__nav-item {
     margin-left: 2rem;
+
+    &:first-child {
+      margin-left: 0;
+    }
   }
 
   &__nav-link {
@@ -620,4 +643,13 @@ a {
       text-align: center;
     }
   }
+}
+
+.attribution{
+  width: 100%;
+  position: absolute;
+  bottom: 5px;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 0 1.5rem;
 }
